--- a/src/app/longterm/itembuttonmenu/item-button-page/item-button-page.component.html
+++ b/src/app/longterm/itembuttonmenu/item-button-page/item-button-page.component.html
@@ -12,6 +12,7 @@
 </div>
 <app-child [salesCategoryListRefreshEvent]="salesCategoryListRefresh.asObservable()"></app-child>
 <app-child [salesItemListRefreshEvent]="salesItemListRefresh.asObservable()"></app-child>
+<app-child [salesItemAddedInSCEvent]="salesItemAddedInSC.asObservable()"></app-child>
 
 <div class="footer fixed-bottom cncsnFooter">
     <div id="stButtonBottomBar" class="row">
