--- a/src/app/longterm/itembuttonmenu/item-button-sales-item-list/item-button-sales-item-list.component.html
+++ b/src/app/longterm/itembuttonmenu/item-button-sales-item-list/item-button-sales-item-list.component.html
@@ -1,6 +1,69 @@
 <div class="panel">
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
-        <div class="row bkgray">
+        <table class="table table-hover table-bordered align-middle">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">Item Description</th>
+                    <th scope="col" class="text-center">Price</th>
+                    <th scope="col" class="text-center">Sales Tax (%)</th>
+                    <th scope="col" class="text-center">Order</th>
+                    <th scope="col" class="text-center">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of saleItemList; let i = index" [attr.data-salesitem-id]="item.salesItemID"
+                    [attr.data-department-id]="item.departmentUID">
+        
+                    <!-- Item Description -->
+                    <td>
+                        <input type="text" class="form-control" style="text-transform: capitalize;"
+                            [(ngModel)]="item.salesItemDescription" placeholder="Enter Item Description Here">
+                    </td>
+        
+                    <!-- Price -->
+                    <td class="text-center">
+                        <input type="number" class="form-control text-center" 
+                            appPosCurrency  [(ngModel)]="item.price"
+                            placeholder="Price">
+                    </td>
+        
+                    <!-- Sales Tax + Default Tax Button -->
+                    <td>
+                        <div class="input-group">
+                            <input type="text" class="form-control text-center" 
+                                appPosCurrency3 name="saleTax_{{i}}"
+                                [(ngModel)]="item.salesTax" placeholder="Tax %">
+                            <button class="btn btn-outline-success btn-sm" type="button" title="Set Default Sales Tax"
+                                (click)="setDefaultTax(item)">
+                                <i class="bi bi-check-lg"></i>
+                            </button>
+                        </div>
+                    </td>
+        
+                    <!-- Reorder Buttons -->
+                    <td class="text-center">
+                        <div class="btn-group-vertical btn-group-sm row" role="group">
+                            <button type="button" class="btn btn-outline-secondary" (click)="moveItemUp(i)"
+                                [disabled]="i === 0">
+                                <i class="bi bi-arrow-up"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary" (click)="moveItemDown(i)"
+                                [disabled]="i === saleItemList.length - 1">
+                                <i class="bi bi-arrow-down"></i>
+                            </button>
+                        </div>
+                    </td>
+        
+                    <!-- Delete Action -->
+                    <td class="text-center">
+                        <button type="button" class="btn btn-danger btn-sm" (click)="deleteItem(item)" title="Delete Item">
+                            <i class="bi bi-trash"></i> Delete
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- <div class="row bkgray">
             <div class="col-md-6" *ngFor="let itm of saleItemList; let index=index">
                 <button type="button"
                     [ngClass]="[activeId === itm.salesItemID ? 'dpt btn btn-block btn-primary' : 'dpt btn btn-block btn-secondary']"
@@ -9,6 +72,6 @@
                     {{itm.salesItemDescription}}
                 </button>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
