--- a/src/app/longterm/itembuttonmenu/item-button-dept-list/item-button-dept-list.component.html
+++ b/src/app/longterm/itembuttonmenu/item-button-dept-list/item-button-dept-list.component.html
@@ -1,6 +1,7 @@
 <div class="panel" style="background-color: lightgrey;">
     <div class="panel-body ms-2 me-2 mt-2 mb-2">
         <div class="row bkgray">
+            <div style="display: none;">{{deptListRefreshEvent}}</div>
             <div class="col-md-3" *ngFor="let dept of deptList;">
                 <button type="button"
                     [ngClass]="[ activeId === dept.departmentUID ? 'dpt btn btn-block btn-primary' : 'dpt btn btn-block btn-secondary' ]"
