sliding message info/warn/error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
 
   <div class="container-fluid">
       <router-outlet></router-outlet>
+      <app-toast></app-toast>
       <!--<app-logon-vendorlt></app-logon-vendorlt>-->
   </div>
 
