item button menu up down, same tax all items

--- a/src/app/longterm/itembuttonmenu/item-button-page/item-button-page.component.html
+++ b/src/app/longterm/itembuttonmenu/item-button-page/item-button-page.component.html
@@ -128,7 +128,7 @@
             </svg> Add Item
         </button>
         <button class="border border-white btn btn-info btn-lg ftrbtn" style="width:25%;" id="btnSave"
-            [disabled]="disableSaveBtn" aria-label="Left Align" (click)="btnSaveClick($event)">
+            [disabled]="disableSaveBtn" aria-label="Left Align" (click)="btnSaveClick()">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save"
                 viewBox="0 0 16 16">
                 <path
